<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.besaba.anvarov.ra_silenttimer.MainActivity">

    <RadioGroup
        android:id="@+id/rbMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSilent"
            android:id="@+id/rbSilent" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtVibrate"
            android:id="@+id/rbVibrate" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNormal"
            android:id="@+id/rbNormal" />
    </RadioGroup>

    <Button
        android:id="@+id/btCloseView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="35dp"
        android:text="@string/txtCloseView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="35dp"
        android:text="Current mode"
        android:id="@+id/tvCurrentMode"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btKillApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="50dp"
        android:text="@string/txtKillApp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Copyr"
        android:id="@+id/textView" />
</LinearLayout>
